--- a/ux.html
+++ b/ux.html
@@ -41,8 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://deinestudienfinanzierung.join.com/jobs/467920-ui-ux-designer-m-w-d'>Job @ deineStudienfinanzierung (Berlin): UI/ UX De... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oA8Wafwy&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nLxSpMwQ'>Freedom Financial Network Careers - Senior UX Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://www.technicondesign.com/index.php/jobs/detail/1455/3'>UX/UI Designer  Automotive Job, Gothenburg, Sweden | Technicon Design</a></h5> 
@@ -97,7 +101,7 @@
 <p><span class="badge badge-light">Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dept/jobs/1935266'>Job Application for Senior UX Designer (m/w/div) at Dept</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935266'>Job Application for Senior UX Designer (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -125,7 +129,7 @@
 <p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finleap.recruitee.com/o/senior-uxui-designer-fmdiv-for-a-new-finleap-venture'>
       Senior UX/UI Designer (f/m/div) for a new finleap venture - FinLeap GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin</span></p>
@@ -135,7 +139,7 @@
 <p><span class="badge badge-light">Seattle, Washington  Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698531330-designer-ui-ux-ubisoft-club-'>Ubisoft Designer UI/UX (Ubisoft Club) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698531330-designer-ui-ux-ubisoft-club-'>Ubisoft Designer UI/UX (Ubisoft Club) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -205,7 +209,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/1893493'>Job Application for Product Designer (UI/UX) at Arundo Analytics</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway  Oslo, Norway Houston, TXPalo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -245,7 +249,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999698452304-ux-copywriter'>wehkamp UX Copywriter | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999698452304-ux-copywriter'>wehkamp UX Copywriter | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -261,7 +265,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932445'>Job Application for Sr. Mobile UX Designer at Traeger Wood Pellet Grills</a></h5> 
+<h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932445'>Job Application for Sr. Mobile UX Designer at Traeger Wood Pellet Grills</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -285,15 +289,15 @@
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/system-admin-mid-linux-dsnS6s90Kr6zXbaKjNoogA'>System Admin - Mid - LINUX #0584 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/system-admin-mid-linux-dsnS6s90Kr6zXbaKjNoogA'>System Admin - Mid - LINUX #0584 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://roverpass.applytojob.com/apply/GZ7uRbh5z8/UX-Designer-RoverPass'>UX Designer - RoverPass - RoverPass - Career Page</a></h5> 
+<h5><a href='http://roverpass.applytojob.com/apply/GZ7uRbh5z8/UX-Designer-RoverPass'>UX Designer - RoverPass - RoverPass - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -315,11 +319,11 @@
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://instamotion.join.com/jobs/468820-senior-ux-manager-w-m-d'>Job @ InstaMotion Retail (M?nchen): (Senior) UX Ma... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://instamotion.join.com/jobs/468820-senior-ux-manager-w-m-d'>Job @ InstaMotion Retail (M?nchen): (Senior) UX Ma... | JOIN</a></h5> 
 <p><span class="badge badge-light">M?nchen M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -341,7 +345,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -349,7 +353,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o33DafwD&__jvst=Employee&__jvsd=sqMgXhwb&__jvsc=Twitter&bid=nAFwnMwp'>Brandwatch Careers - Product/UX Designer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -395,7 +399,7 @@
 <p><span class="badge badge-light">Berlin Berlin  Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698363335-ux-ui-designer'>lm group UX/UI Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698363335-ux-ui-designer'>lm group UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -449,7 +453,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontheshortlist.zohorecruit.com/recruit/ViewJob.na?digest=OMxI@vOMIjkz5CDtFyJpJcBdio.pCanMiyrTEJpQk3w-&embedsource=Twitter'>Junior UX Designer</a></h5> 
+<h5><a href='https://ontheshortlist.zohorecruit.com/recruit/ViewJob.na?digest=OMxI@vOMIjkz5CDtFyJpJcBdio.pCanMiyrTEJpQk3w-&embedsource=Twitter'>Junior UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -467,10 +471,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350163-graphics-designer-ux-ui-design-part-time-full-time-'>Seeka Technology Graphics designer (UX/UI Design) (Part-time/ Full time) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/StoqoTechnologies/743999698348956-ui-ux-designer-designer-lead-'>Stoqo Technologies UI/UX Designer (Designer / Lead) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Jakarta Selatan, Indonesia  Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
